--- a/src/app/components/planner/canban-card/canban-card.html
+++ b/src/app/components/planner/canban-card/canban-card.html
@@ -1,5 +1,5 @@
 <div class="card" cdkDrag (click)="onCardClick()" style="cursor: pointer;">
-    <div class="card-header d-flex flex-row justify-content-between"
+    <div class="card-header d-flex flex-row justify-content-between rounded-top-2"
         [class.bg-todo]="task().type === 'Todo'"
         [class.bg-in-process]="task().type === 'In process'"
         [class.bg-done]="task().type === 'Done'">
@@ -12,7 +12,7 @@
             [class.bg-high]="task().priority === 'High'">
         </div>
     </div>
-    <div class="card-body d-flex flex-column">
+    <div class="card-body d-flex flex-column rounded-2" style="background-color: #E4D8D8;">
         <span class="text-black">Assigned To: {{ task().assignedTo?.email || 'Nobody' }}</span>
         <ul>
             @for (attachment of task().attachments; track (attachment.id || attachment.name)) {
