--- a/src/app/components/planner/canban-table/canban-table.html
+++ b/src/app/components/planner/canban-table/canban-table.html
@@ -1,5 +1,12 @@
-<div class="container-fluid">
-    <app-canban-column></app-canban-column>
-    <app-canban-column></app-canban-column>
-    <app-canban-column></app-canban-column>
+<div class="container-fluid mt-4">
+    <div class="row flex-nowrap overflow-auto pb-3" cdkDropListGroup>
+        @for (col of tableColumns; track col.id) {
+            <div class="col-12 col-md-4 col-lg-3">
+                <app-canban-column 
+                [title]="col.title"
+                [tasks]="col.tasks"
+                (editTask)="openEditForm($event)" />
+            </div>          
+        }
+    </div>
 </div>
