--- a/src/app/components/planner/canban-column/canban-column.html
+++ b/src/app/components/planner/canban-column/canban-column.html
@@ -4,19 +4,29 @@
     </div>
     <div class="card-body"
         cdkDropList
-        [cdkDropListData]="tasks()"
+        [cdkDropListData]="localTasks()"
         (cdkDropListDropped)="drop($event)"
         style="background-color: #F3E8E8;">
-
-        @for (t of tasks(); track t.id) {
-            <app-canban-card
-                [task]="t" 
-                (cardClicked)="handleEdit($event)"
-                class="mb-2 d-block"/>       
-        } @empty {
-            <div class="text-center p-3 text-muted border rounded border-dashed">
-                    No tasks here yet.
+        <div class="container">      
+            @for (t of localTasks(); track t.id) {
+                <app-canban-card
+                    [task]="t" 
+                    (cardClicked)="handleEdit($event)"
+                    class="mb-2 d-block"/>       
+            } @empty {
+                <div class="text-center p-3 text-muted border rounded border-dashed">
+                        No tasks here yet.
+                </div>
+            }        
+        </div>
+        <div class="container row mt-3">
+            <div id="addTask" style="background-color: #E4D8D8;">
+                <div class="me-auto text-center pb-1" style="background-color:#CFB9B9;">    
+                    <svg (click)="addTask.emit(title())" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 640 640" fill="currentColor">
+                        <path d="M352 128C352 110.3 337.7 96 320 96C302.3 96 288 110.3 288 128L288 288L128 288C110.3 288 96 302.3 96 320C96 337.7 110.3 352 128 352L288 352L288 512C288 529.7 302.3 544 320 544C337.7 544 352 529.7 352 512L352 352L512 352C529.7 352 544 337.7 544 320C544 302.3 529.7 288 512 288L352 288L352 128z"/>
+                    </svg>
+                </div>
             </div>
-        }        
+        </div>
     </div>
 </div>  
