--- a/src/app/components/planner/canban-table/canban-table.html
+++ b/src/app/components/planner/canban-table/canban-table.html
@@ -1,11 +1,13 @@
 <div class="container-fluid mt-4">
     <div class="row flex-nowrap overflow-auto pb-3" cdkDropListGroup>
-        @for (col of tableColumns; track col.id) {
+        @for (col of tableColumns(); track col.id) {
             <div class="col-12 col-md-4 col-lg-3">
                 <app-canban-column 
-                [title]="col.title"
+                [title]="col.name"
                 [tasks]="col.tasks"
-                (editTask)="openEditForm($event)" />
+                (editTask)="openEditForm($event)"
+                (addTask)="openCreateForm($event)"
+                (tasksChanged)="updateColumnTasks(col.id, $event)" />
             </div>          
         }
     </div>
